--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "web-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "postman-request": "^2.88.1-postman.32"
